[gd_scene load_steps=4 format=3 uid="uid://y4nkvc6grnw5"]

[ext_resource type="Script" path="res://thurs.gd" id="1_usiot"]
[ext_resource type="AudioStream" uid="uid://da68w747fn444" path="res://Samples/tom-808.wav" id="2_bmwih"]
[ext_resource type="AudioStream" uid="uid://6efo85ksrht2" path="res://Samples/kick-tight.wav" id="3_g2q87"]

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("s")]
script = ExtResource("1_usiot")
s = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 398.0
offset_top = 321.0
offset_right = 467.0
offset_bottom = 352.0
text = "ClickMe"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bmwih")
pitch_scale = 1.02
autoplay = true

[node name="HSlider" type="HSlider" parent="."]
offset_left = 78.0
offset_top = 202.0
offset_right = 854.0
offset_bottom = 267.0
max_value = 16.0

[node name="LowPass" type="HSlider" parent="."]
offset_left = 271.0
offset_top = 541.0
offset_right = 879.0
offset_bottom = 557.0
max_value = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g2q87")

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="LowPass" to="." method="_on_low_pass_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
